--- a/garner_portfolio.html
+++ b/garner_portfolio.html
@@ -22,10 +22,10 @@
     <button><a href="garner_paint.html">paintings</a></button>
     </nav>
 <div class="owl-carousel owl-theme">
-    <div class="item"><img src="images/image.png"><h1>Versed...</h1><p>Logan Garner is skilled with his hands, a pencil, a mouse, and a paintbrush alike. Here, you can see his proudest works with just the click of a mouse.</p></div>
-    <div class="item"><img src="images/image.png"><h1>Skilled...</h1><p>Logan Garner took his degree in order to utilize his skills and become a jack of all trades in the industry.</p></div>
-    <div class="item"><img src="images/image.png"><h1>Savvy...</h1><p>Logan Garner is equally skilled with Photoshop, Illustrator, and InDesign, as well as Macintosh computers as a whole since 2011.</p></div>
-    <div class="item"><img src="images/image.png"><h1>Educated...</h1><p>With an alumni as a Graphic Design major at Arkansas State University since 20XX, Logan Garner has the skills to adapt to any job or medium needed.</p></div>
+    <div class="item"><img src="images/creative.jpeg"><h1>Versed...</h1><p>Logan Garner is skilled with his hands, a pencil, a mouse, and a paintbrush alike. Here, you can see his proudest works with just the click of a mouse.</p></div>
+    <div class="item"><img src="images/Garner_EAtget.JPG"><h1>Skilled...</h1><p>Logan Garner took his degree in order to utilize his skills and become a jack of all trades in the industry.</p></div>
+    <div class="item"><img src="images/TENSION.png"><h1>Savvy...</h1><p>Logan Garner is equally skilled with Photoshop, Illustrator, and InDesign, as well as Macintosh computers as a whole since 2011.</p></div>
+    <div class="item"><img src="images/Nightbreak.jpg"><h1>Educated...</h1><p>With an alumni as a Graphic Design major at Arkansas State University since 20XX, Logan Garner has the skills to adapt to any job or medium needed.</p></div>
 </div>
 <p>For more artwork, please visit: <!-- GeoPainting site will go here.!--></p>
 <footer>
