--- a/garner_portfolio.html
+++ b/garner_portfolio.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-    <link rel="stylesheet" href="OwlCarousel2-2.2.1/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="OwlCarousel2-2.2.1/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="media-queries.css" media="all">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -30,8 +30,8 @@
 <p>For more artwork, please visit: <!-- GeoPainting site will go here.!--></p>
 <footer>
     Email me at RLoganG@gmail.com - Logan Garner Art, PO Box 124, Jonesboro AR, 72401 - (870)-555-5555
-    <script src="OwlCarousel2-2.2.1/docs/assets/vendors/jquery.min.js"></script>
-    <script src="OwlCarousel2-2.2.1/dist/owl.carousel.min.js"></script>
+    <script src="docs/assets/vendors/jquery.min.js"></script>
+    <script src="dist/owl.carousel.min.js"></script>
 </footer>
 <script>
     $(document).ready(function(){
