--- a/garner_portfolio.html
+++ b/garner_portfolio.html
@@ -27,7 +27,7 @@
     <div class="item"><img src="images/TENSION.png"><h1>Savvy...</h1><p>Logan Garner is equally skilled with Photoshop, Illustrator, and InDesign, as well as Macintosh computers as a whole since 2011.</p></div>
     <div class="item"><img src="images/Nightbreak.jpg"><h1>Educated...</h1><p>With an alumni as a Graphic Design major at Arkansas State University since 20XX, Logan Garner has the skills to adapt to any job or medium needed.</p></div>
 </div>
-<p>For more artwork, please visit: <!-- GeoPainting site will go here.!--></p>
+<p>For more artwork, please visit: https://rlogang.github.io/logangeop/</p>
 <footer>
     Email me at RLoganG@gmail.com - Logan Garner Art, PO Box 124, Jonesboro AR, 72401 - (870)-555-5555
     <script src="docs/assets/vendors/jquery.min.js"></script>
