--- a/garner_digi.html
+++ b/garner_digi.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header style="background-color:#0B0B61;">
-    <a href="garner_portfolio.html">
+    <a href="index.html">
     <img class="home" src=images/lglogo.png>
     </a>
 </header>
